--- a/tools/web/index.html
+++ b/tools/web/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
     <canvas id="glcanvas" tabindex='1'></canvas>
-    <script src="https://not-fl3.github.io/miniquad-samples/mq_js_bundle.js"></script>
+    <script src="./mq.js"></script>
     <script>load("sol_chess.wasm");</script> <!-- Your compiled WASM binary -->
 </body>
 </html>
